--- a/src/main/resources/database/database.properties
+++ b/src/main/resources/database/database.properties
@@ -1,4 +1,4 @@
-hibernate.show_sql=false
+hibernate.show_sql=true
 hibernate.hbm2ddl.auto=create-drop
 hibernate.cache.use_second_level_cache=false
 hibernate.cache.use_query_cache=false
