--- a/src/main/resources/database/mysql.properties
+++ b/src/main/resources/database/mysql.properties
@@ -1,4 +1,5 @@
-hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
+spring.jpa.properties.hibernate.dialect.storage_engine=innodb
 jdbc.driverClassName=com.mysql.cj.jdbc.Driver
 user.jdbc.url=jdbc:mysql://localhost:3306/db_systemadapter?useSSL=false
 jdbc.user=root
