--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,13 @@
 			<version>28.1-jre</version>
 		</dependency>
 		
+		<dependency>
+		    <groupId>org.springframework.security</groupId>
+		    <artifactId>spring-security-test</artifactId>
+		    <scope>test</scope>
+		</dependency>
+		
+		
 	</dependencies>
 
 	<build>
